deploy/overlays/production/service-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiral-service
spec:
  template:
    spec:
      containers:
        - name: service
          volumeMounts:
            - name: vault-ca
              mountPath: /var/run/secrets/spiral-safe/vault
              readOnly: true
      volumes:
        - name: vault-ca
          secret:
            secretName: vault-tls
            items:
              - key: ca.crt
                path: ca.crt
            defaultMode: 0444
