deploy/overlays/production/remove-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiral-client
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: spiral-client
$patch: delete
